--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <br>
                 <label>
                   <input type="checkbox" id="pres_07" name="pres_07" value="pres_07" class="largerCheckbox"/>
-                  <span><b>Lenço Umidecido</b></span>
+                  <span><b>Lenço Umedecido</b></span>
                 </label>
                 <br>
                 <label>
